Commit application.properties with updated schema details

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 # DataSource settings
-spring.datasource.url=jdbc:mysql://localhost:3306/Employee
+spring.datasource.url=jdbc:mysql://localhost:3306/Student
 spring.datasource.username=root
 spring.datasource.password=root
 
