--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=dev
+
 # DataSource settings
 spring.datasource.url=jdbc:mysql://localhost:3306/Student
 spring.datasource.username=root
