--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.26</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
