--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.profiles.active=dev
 
 # DataSource settings
-spring.datasource.url=jdbc:mysql://localhost:3306/Student
+spring.datasource.url=jdbc:mysql://mysql-container:3306/Student?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
+
+logging.level.org.springframework=DEBUG
+
 
 # JPA settings
 spring.jpa.show-sql=true
